<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_star_location_screen"
    tools:context=".presentation.ui.settings.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="40dp">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="66dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"
            android:layout_height="30dp"
            android:contentDescription="@string/content_description_back"
            android:src="@drawable/btn_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="250dp"
            android:layout_marginTop="20dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/img_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_back" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_share_the_app"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="80dp"
                android:backgroundTint="#FF0000"
                android:fontFamily="@font/poppins_extrabold"
                android:text="@string/share_the_app"
                android:textAllCaps="false"
                android:textSize="17sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_rate_us"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="80dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="#FF0000"
                android:fontFamily="@font/poppins_extrabold"
                android:text="@string/rate_us"
                android:textAllCaps="false"
                android:textSize="17sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="80dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="#FF0000"
                android:fontFamily="@font/poppins_extrabold"
                android:text="@string/privacy_policy"
                android:textAllCaps="false"
                android:textSize="17sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_terms_of_use"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="80dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="#FF0000"
                android:fontFamily="@font/poppins_extrabold"
                android:text="@string/terms_of_use"
                android:textAllCaps="false"
                android:textSize="17sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_clear_data"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="80dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="#FF0000"
                android:fontFamily="@font/poppins_extrabold"
                android:text="@string/clear_data"
                android:textAllCaps="false"
                android:textSize="17sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>